fix: Add missing white space in empty quicklook
Some margin is missing between the "Convert to…" and the "ellipsis"
buttons in the quicklook panel for empty documents.

Part of story #28273: create OnlyOffice documents

--- a/plugins/document/themes/quicklook/_quicklook-actions.scss
+++ b/plugins/document/themes/quicklook/_quicklook-actions.scss
@@ -19,12 +19,9 @@
 
 .document-quick-look-document-action {
     display: flex;
+    gap: var(--tlp-small-spacing);
 }
 
 .document-quick-look-folder-action-new-folder-button {
-    margin: 0 var(--tlp-small-spacing) 0 0;
-}
-
-.document-quick-look-action-button-margin {
     margin: 0 var(--tlp-small-spacing) 0 0;
 }
